<resources>
    <string name="app_name">Habikery</string>

    <!-- send cake -->
    <string name="send_cake_title">케익 보내기</string>
    <string name="send_cake_button">보내기</string>
    <string name="send_cake_message_hint">케익처럼 달콤한 응원을 써주세요.</string>
    <string name="send_cake_message_alert">욕설 및 부적절한 글은 신고를 받을 수 있어요.</string>
    <string name="toYou">%s 너에게</string>
    <string name="cakeName">%s케익</string>
    <string name="send_txt_complete_alert">선물 보내기가 완료 되었습니다!</string>

    <!-- onboarding -->
    <string name="onboarding_one_title">Habikery에 오신 걸 환영해요!</string>
    <string name="onboarding_one_description">매일 실천할 수 있는 습관을 만들고\n유지할 수 있는 방법, 소개해드릴까요?</string>
    <string name="onboarding_two_title">딱 3일! 습관을 지속해보세요</string>
    <string name="onboarding_two_description">3일째날 다른 사용자에게서 응원의 메시지와\n함께 조각 케이크를 받을 수 있어요</string>
    <string name="onboarding_three_title">맛있는 홀케이크를 완성하세요</string>
    <string name="onboarding_three_description">조각 케이크 8조각을 모아\n홀케이크를 완성하고 뿌듯함을 느껴보세요</string>
    <string name="onboarding_four_title">서로의 습관을 응원해보세요</string>
    <string name="onboarding_four_description">다른 사용자에게 메세지와 케이크를 보내보세요\n뿌듯함이 2배가 될거예요</string>

    <!-- diary -->
    <string name="diary_title">케익 다이어리</string>
    <string name="diary_title_piece_cake">조각케이크</string>
    <string name="diary_title_whole_cake">홀케이크</string>
    <string name="diary_cake_name">%s케익</string>

    <!-- receive cake -->
    <string name="receive_title">케익 도착</string>
    <string name="receive_btn_go_diary">케익 보러가기</string>
    <string name="receive_btn_send_cake">나도 할래요, 선물 보내기!</string>
    <string name="receive_btn_report">신고하기</string>
    <string name="receive_from_who">님이 보낸 응원</string>

    <!-- report -->
    <string name="report_txt_title">신고사유</string>
    <string name="report_txt_offensive">욕설, 비속어</string>
    <string name="report_txt_inappropriate">음란언어</string>
    <string name="report_txt_spam">광고, 홍보</string>
    <string name="report_txt_other">기타</string>
    <string name="report_txt_cancel">취소</string>
    <string name="report_txt_submit">확인</string>
    <string name="report_txt_complete_alert">신고가 접수되었습니다.</string>
</resources>
