<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.receive.ReceiveActivity">

    <data>

        <variable
            name="vm"
            type="com.nexters.moss.ui.receive.ReceiveActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cake_green_tea"
        android:paddingStart="@dimen/receive_padding_start_end"
        android:paddingTop="@dimen/receive_padding_top_bottom"
        android:paddingEnd="@dimen/receive_padding_start_end"
        android:paddingBottom="@dimen/receive_padding_top_bottom">

        <RelativeLayout

            android:id="@+id/layout_receive_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/receive_padding_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/receive_title"
                android:textColor="@color/white"
                android:textSize="@dimen/receive_txt_title"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                android:src="@drawable/icon_exit" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_receive_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_receive_head">

            <LinearLayout
                android:id="@+id/layout_receive_cake_main_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:background="@drawable/receive_cake_background"
                    android:layout_width="match_parent"
                    android:layout_height="358dp">

                    <RelativeLayout
                        android:layout_above="@id/layout_cake_name"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/cake_green_tea"
                            android:layout_width="232dp"
                            android:layout_height="165dp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layout_cake_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/receive_padding_card_top"
                        android:layout_alignParentBottom="true"
                        android:paddingBottom="@dimen/receive_padding_card_bottom">

                        <TextView
                            android:id="@+id/txt_receive_cake_name_subjective"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:text="산책하는 당신을 위한"
                            android:textColor="@color/receive_cake_name_subjective"
                            android:textSize="@dimen/receive_txt_cake_soft" />

                        <TextView
                            android:id="@+id/txt_receive_cake_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_receive_cake_name_subjective"
                            android:layout_centerHorizontal="true"
                            android:text="녹차케익"
                            android:textColor="@color/receive_cake_name"
                            android:textSize="@dimen/receive_txt_cake_bold">

                        </TextView>
                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/receive_padding_start_end"
                    android:paddingTop="@dimen/receive_padding_card_top">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="채은"
                            android:textColor="@color/receive_cheer_message_from"
                            android:textSize="@dimen/receive_txt_small"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/receive_from_who"
                            android:textColor="@color/receive_cheer_message_from"
                            android:textSize="@dimen/receive_txt_small"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="산책은 머리를 맑게 해준대요~"
                            android:textColor="@color/receive_cheer_message_content"
                            android:textSize="@dimen/receive_txt_normal"></TextView>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_receive_cake_main_img"
                android:paddingTop="@dimen/receive_padding_report_top">

                <Button
                    android:id="@+id/btn_receive_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/receive_btn_report"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/receive_txt_small" />
            </RelativeLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/receive_padding_top_bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/receive_btn"
                android:padding="@dimen/receive_padding_btn"
                android:text="@string/receive_btn_go_diary"
                android:textColor="@color/white"
                android:textSize="@dimen/receive_txt_normal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:padding="@dimen/receive_padding_btn"
                android:text="@string/receive_btn_send_cake"
                android:textColor="@color/white"
                android:textSize="@dimen/receive_txt_normal" />
        </LinearLayout>

    </RelativeLayout>

</layout>