<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.SendActivity">

    <data>

        <variable
            name="vm"
            type="com.nexters.moss.ui.send.SendViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/layout_send_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/send_border"
            android:padding="15dp">

            <ImageButton
                android:id="@+id/btn_send_cake_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                tools:text="뒤로가기" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/send_cake_title"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btn_send_cake_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="나가기" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_send_top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_send_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_send_main_cake_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/send_border"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/img_send_cake_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/temp_cake" />

                        <LinearLayout
                            android:id="@+id/layout_send_main_cake_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_send_cake_name_adjective"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="걷기를 위한"
                                android:textAlignment="center"
                                android:textSize="@dimen/size_12sp" />

                            <TextView
                                android:id="@+id/txt_send_cake_name_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="단백질 케이크"
                                android:textAlignment="center"
                                android:textSize="@dimen/size_20sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/layout_send_main_choose_cake"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/send_border"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/layout_send_cake_recycler"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:setCakeList="@{vm.cakeList}" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_send_main_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="20dp">

                            <EditText
                                android:id="@+id/edit_txt_send_cake_message"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/send_cake_message_hint"
                                android:textSize="@dimen/size_18sp" />

                            <TextView
                                android:id="@+id/txt_send_cake_alert"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/send_cake_message_alert"
                                android:textSize="@dimen/size_12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/layout_send_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/btn_send_cake_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_cake_button"
                android:textSize="@dimen/size_16sp" />

        </LinearLayout>

    </RelativeLayout>


</layout>